costumizing the GUI